--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ body {
   font-size: 20px;
 }
 
+h1 {
+  font-size: 2rem;
+  text-align: center;
+}
+
 /*************************************************
 header
 *************************************************/
